# toon-python

./: .gitignore  README.md  pyproject.toml
src/toon_format/: __init__.py  decoder.py  encoder.py  types.py
tests/: __init__.py  test_decoder.py  test_encoder.py
