[project]
name = "toon-format"
version = "0.1.0"
description = "Token-Oriented Object Notation – a token-efficient JSON alternative for LLM prompts"
readme = "README.md"
authors = [
    { name = "Johann Schopplich", email = "hello@johannschopplich.com" }
]
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
keywords = ["toon", "serialization", "llm", "data-format", "token-efficient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://toonformat.dev"
Repository = "https://github.com/toon-format/toon-python"
Documentation = "https://github.com/toon-format/toon"
"Bug Tracker" = "https://github.com/toon-format/toon-python/issues"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
